--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <meta charset="UTF-8">
-<title>counter minimum - Mithril.js</title>
+<title>東方ロングスカートクイズ</title>
 
 <!--[if IE]><script src="es5-shim.min.js"></script><![endif]-->
 
-<body></body>
+<body>
+	<h2>東方ロングスカートクイズ</h2>
+	<div id="root">
 
-<script src="/js/app.compile.js"></script>
+	</div>
+	<script src="/js/app.compile.js"></script>
+</body>
+
